# react-native-linear-gradient

./: .flowconfig  .gitignore  README.md  index.harmony.js  index.js  package.json  react-native-linear-gradient-3.0.0-alpha.1.tgz  react-native-oh-library-react-native-linear-gradient-2.8.3-0.0.1.tgz
android/src/main/java/com/rnlineargradient/: LinearGradientManager.java
doc/: en.md  zh-cn.md
harmony/: linear_gradient.har
harmony/linear_gradient/: Index.ets  NOTICE  README.OpenSource  Readme.md  build-profile.json5  index.ets  oh-package.json5
harmony/linear_gradient/src/main/: module.json5
harmony/linear_gradient/src/main/cpp/: CMakeLists.txt  ComponentDescriptors.h  LinearGradientComponentInstance.cpp  LinearGradientComponentInstance.h  LinearGradientJSIBinder.h  LinearGradientNapiBinder.h  LinearGradientPackage.h  LinearGradientStackNode.cpp  LinearGradientStackNode.h  NativeNodeApi.cpp  NativeNodeApi.h  Props.cpp  Props.h  ShadowNodes.cpp  ShadowNodes.h
harmony/linear_gradient/src/main/ets/: RNLinearGradient.ets
src/: index.js
